--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     implementation project(":SUST-debug");
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
     implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
