--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.nrick.ongkur">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon, android:theme">
-        <activity android:name=".ScanPlane"></activity>
+        <activity android:name=".ImageProcessingCommunity"></activity>
+        <activity android:name=".ScanPicture" />
+        <activity android:name=".DailyGames2" />
+        <activity android:name=".ResultPlane" />
+        <activity android:name=".ScanPlane" />
         <activity android:name=".FeedSuccess" />
         <activity android:name=".GovernChild" />
         <activity android:name=".DailyGames" />
